--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0;URL='https://drive.google.com/file/d/1JK94eZAVkm-aNZByivmZbVhhrNt0X8I4/view'"> 최신 파일을 불러오고 있습니다.
+    <meta http-equiv="refresh" content="0;URL='https://drive.google.com/open?id=1JK94eZAVkm-aNZByivmZbVhhrNt0X8I4'"> 최신 파일을 불러오고 있습니다.
     <div onmousedown="event.preventDefault ? event.preventDefault() : event.returnValue = false"></div>
 
     <BODY ondragstart="return false;" ondrop="return false;">
